--- a/src/app/add-on/add-on.component.html
+++ b/src/app/add-on/add-on.component.html
@@ -1,1 +1,43 @@
-<p>add-on works!</p>
+<h1>Pick add-ons</h1>
+<p>Add-ons help enhance your gaming <br>
+    experience.</p>
+
+<button type="button">
+    <label for="onlineService">
+        <input type="checkbox" id="onlineService" name="onlineService" value="onlineService">
+        <div class="description">
+            <h2>Online service</h2>
+            <p>Acess to multiplayer games</p>
+        </div>
+        <div class="price">
+            <p>price</p>
+        </div>
+
+    </label>
+</button>
+<button type="button">
+    <label for="largerStockage">
+        <input type="checkbox" id="largerStockage" name="largerStockage" value="largerStockage">
+        <div class="description">
+            <h2>Online service</h2>
+            <p>Acess to multiplayer games</p>
+        </div>
+        <div class="price">
+            <p>price</p>
+        </div>
+
+    </label>
+</button>
+<button type="button">
+    <label for="customizableProfile">
+        <input type="checkbox" id="customizableProfile" name="customizableProfile" value="customizableProfile">
+        <div class="description">
+            <h2>Online service</h2>
+            <p>Acess to multiplayer games</p>
+        </div>
+        <div class="price">
+            <p>price</p>
+        </div>
+
+    </label>
+</button>
