--- a/src/app/plan/plan.component.html
+++ b/src/app/plan/plan.component.html
@@ -1,1 +1,39 @@
-<p>plan works!</p>
+<div class="card">
+<h1>Select your plan</h1>
+<p>
+    You have the option of monnthly or <br>
+    yearly billing
+</p>
+
+
+
+<!-- <div> -->
+<button type="button" id="arcade" name="plan" value="Arcade" checked>
+    <div><img src="../../assets/images/icon-arcade.svg." alt="icon-arcade"></div>
+    <div>
+      <h2>Arcade</h2>
+      <p>price</p>
+    </div>
+</button>
+
+<!-- </div> -->
+
+
+<button type="radio" id="dewey" name="plan" value="dewey">
+    <div><img src="../../assets/images/icon-advanced.svg" alt="icon-advanced"></div>
+    <div>
+        <h2>Advanced</h2>
+        <p>price</p>
+    </div>
+</button>
+
+
+<button type="radio" id="louie" name="plan" value="louie">
+    <div><img src="../../assets/images/icon-pro.svg" alt="icon-pro"></div>
+    <div>
+        <h2>Pro</h2>
+        <p>price</p>
+    </div>
+</button>
+
+</div>
