--- a/src/app/resum/resum.component.html
+++ b/src/app/resum/resum.component.html
@@ -1,1 +1,14 @@
-<p>resum works!</p>
+<h1>Finishing up</h1>
+<p>Double-check everything looks OK <br>
+before confirming
+</p>
+<div>
+    <div>
+        plan
+    </div>
+    <div>
+boucle addon
+    </div>
+
+</div>
+<span>TOTAL</span>
