--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-<div class="background">
-  <div class="side-bar">
-    <app-menu></app-menu>
 
-  </div>
+    <app-menu></app-menu>
+<div class="card">
+  <!-- appeler la carte concerné -->
 </div>
+<footer>
+  
+</footer>
+ 
