--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,1 +1,19 @@
-<p>menu works!</p>
+<nav>
+    <a [routerLink]="['./personal-info']">
+        1
+    </a>
+    <a [routerLink]="['./plan']">
+        2
+    </a>
+    <a [routerLink]="['./add-on']">
+        3
+    </a>
+    <a [routerLink]="['./resum']">
+        4
+    </a>
+</nav>
+
+<footer>
+    <!-- <button routerLink="">Next Step</button> -->
+</footer>
+<router-outlet></router-outlet>
