--- a/src/app/personal-info/personal-info.component.html
+++ b/src/app/personal-info/personal-info.component.html
@@ -1,1 +1,20 @@
 <h1>Personal info</h1>
+<p>please provide your name, email<br>adress, and phone number.</p>
+
+<form action="" method="get" class="form-personal-info">
+    <div class="form-personal-info">
+      <label for="name">Name: </label>
+      <input type="text" name="name" id="name" placeholder="e.g.Stephen King" required >
+    </div>
+    <div class="form-personal-info">
+      <label for="email">Enter your email: </label>
+      <input type="email" name="email" id="email" placeholder="e.g.stephenking@lorem.com" required>
+    </div>
+    <div class="form-personal-info">
+        <label for="phone">Enter your email: </label>
+        <input type="tel" name="phone" id="phone" placeholder="e.g.+1234567890" required>
+      </div>
+    <div class="form-personal-info">
+      <input type="submit" value="Subscribe!">
+    </div>
+  </form>
