--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
+<app-menu></app-menu>  
 
-    <app-menu></app-menu>
 <div class="card">
-  <!-- appeler la carte concerné -->
+  <!-- <router-outlet></router-outlet> -->
 </div>
-<footer>
-  
-</footer>
- 
+
+<!-- <footer>
+<button>Back</button>
+<button>Next</button>
+</footer> -->
