--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,168 @@
 /* You can add global styles to this file, and also import other style files */
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
+}
+
+body {
+    line-height: 1;
+}
+
+ol,
+ul {
+    list-style: none;
+}
+
+blockquote,
+q {
+    quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+/***************** real css ********************/
+
 @font-face {
-    font-family: "Ubuntu";
-    src: url(../src/assets/fonts/Ubuntu-Regular.ttf),url(../src/assets/fonts/Ubuntu-Medium.ttf),url(../src/assets/fonts/Ubuntu-Regular.ttf);
-    font-weight: bold, medium, regular;
+    font-family: "Ubuntu-regular";
+    src: url(../src/assets/fonts/Ubuntu-Regular.ttf);
+}
+
+@font-face {
+    font-family: "Ubuntu-medium";
+    src: url(../src/assets/fonts/Ubuntu-Medium.ttf);
+}
+
+@font-face {
+    font-family: "Ubuntu-bold";
+    src: url(../src/assets/fonts/Ubuntu-Bold.ttf);
 }
 
 :root {
-    //color
+    /**************** COLOR *****************/
+    //### Primary
+    --Marine-blue: hsl(213, 96%, 18%);
+    --Purplish-blue: hsl(243, 100%, 62%);
+    --Pastel-blue: hsl(228, 100%, 84%);
+    --Light-blue: hsl(206, 94%, 87%);
+    --Strawberry-red: hsl(354, 84%, 57%);
+
+    // ### Neutral
+    --Cool-gray: hsl(231, 11%, 63%);
+    --Light-gray: hsl(229, 24%, 87%);
+    --Magnolia: hsl(217, 100%, 97%);
+    --Alabaster: hsl(231, 100%, 99%);
+    --White: hsl(0, 0%, 100%);
+
     --main-bg-color: hsl(229, 24%, 87%);
     --title-color: hsl(213, 96%, 18%);
     -Purplish-blue: hsl(243, 100%, 62%);
@@ -22,39 +178,33 @@
     //font 
     font-family: "Ubuntu", sans-serif;
 
-    --Font-size-paragraph: 16px
+    --Font-size-p: 16px
+}
+
+body {
+
+    background: url(./assets/images/bg-sidebar-mobile.svg)no-repeat;
+    background-size: 100%;
+    background-color: var(--main-bg-color);
+    max-width: 375px;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    font-size: var(--Font-size-p);
 }
 
 h1 {
     font-size: 40px;
+    color: var(--title-color);
 }
 
 h2 {
     font-size: 30px;
 }
 
-body {
-    background-color: var(--main-bg-color);
-    max-width: 375px;
-    height: 100vh;
-    overflow: hidden;
-    font-size: var(--Font-size-paragraph);
-
-    .sidebar {
-        background: url(./assets/images/bg-sidebar-mobile.svg);
-        width: 375px;
-        height: 172px;
-    }
-
-}
-
 p {
-    font-size: var(--Font-size-paragraph);
+    font-size: var(--Font-size-p);
 
-}
-
-h1 {
-    color: var(--title-color);
 }
 
 @media (min-width : 376) {
