--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,13 +1,29 @@
-    a {
-        color: var(--menu-li);
-        border: solid 1px var(--menu-li);
-        display: inline;
-        border-radius: 50%;
-        margin-inline: 10px;
+nav {
+    // margin-top: 10vh;
+    // margin-inline: 10% ;
+    margin: auto;
+    display: flex;
+   
 
-        
-        padding: 8px;
-        list-style: none;
-        text-decoration: none;
-      
-    }
+}
+
+a {
+    color: var(--menu-li);
+    border: solid 1px var(--menu-li);
+
+    border-radius: 50%;
+    margin-inline: 10px;
+    width: 20px;
+    height: 20px;
+    display: table-cell;
+    vertical-align: middle;
+
+    padding: 8px;
+    list-style: none;
+    text-decoration: none;
+    text-align: center;
+
+}
+p{
+    text-align: center;
+}
